# maluvm

./: .gitignore  2  Cargo.toml
gui/: Cargo.toml
gui/assets/asm/: code_example.malu
gui/src/: app.rs  code.rs  lib.rs  main.rs
src/: asm.rs  interpreter.rs  main.rs  op.rs
vm/: Cargo.toml
vm/src/: asm.rs  interpreter.rs  lib.rs  main.rs  op.rs  parse.rs
